<resources>
    <string name="app_name">Detectify</string>
    <string name="flashwork">flashWork</string>
    <string name="cameraswitch">cameraSwitch</string>
    <string name="camerashutter">cameraShutter</string>
    <string name="theme_switcher">Switch Theme</string>
    <string name="detectify">DETECTIFY</string>
    <string name="open_camera">openCamera</string>
    <string name="cameraflip">cameraflip</string>
    <string name="mainlogo">mainlogo</string>
    <string name="camera">Camera</string>
    <string name="barcodebutton">barcodebutton</string>
    <string name="barcode_scanner">Barcode Scanner</string>
    <string name="facebutton">facebutton</string>
    <string name="face_analyzer">Face Analyzer</string>
    <string name="text_recognition">Text Recognition</string>
    <string name="textrbutton">textrbutton</string>
    <string name="face_detection_result">Face Detection Result</string>
    <string name="number_of_faces">Number of faces</string>
    <string name="left_eye_open_probability">Left Eye Open Probability</string>
    <string name="right_eye_open_probability">Right Eye Open Probability</string>
    <string name="smiling_probability">Smiling Probability</string>
    <string name="confidence">Confidence</string>
    <string name="index">Index:</string>
    <string name="image_label_result">Image Label Result</string>
    <string name="text_line_recognition_result">Text Line Recognition Result</string>
    <string name="splashscreen">splashScreen</string>
    <string name="splash_logo">splash_logo</string>
    <string name="loadbaruplogo">loadBarUpLogo</string>
    <string name="objectdbutton" />
    <string name="object_detector">Object Detector</string>
    <string name="object_result">Object Result</string>
    <string name="object_id">Trace Id</string>
    <string name="barcode_result">Barcode Result</string>
    <string name="copybutton">copyButton</string>
    <string name="recognized_text">Recognized Text</string>
    <string name="pick_amp_extract_text"><![CDATA[Pick & Extract Text]]></string>
    <string name="image_picker">image_picker</string>
    <string name="snap_amp_extract_text"><![CDATA[Snap & Extract Text]]></string>
    <string name="snapimg">snapimg</string>
    <string name="realtimetextimg">realTimeTextimg</string>
    <string name="real_time_text_recognition">Real Time Text Recognition</string>
    <string name="no_text_present_in_taken_picture">No Text present in taken picture</string>
    <string name="copyimg">copyImg</string>
    <string name="copy">Copy</string>
    <string name="screenshot">screenshot</string>
    <string name="restart">restart</string>
    <string name="share">share</string>
    <string name="delete">delete</string>
    <string name="langtext">langText</string>
    <string name="image_labeler">Image Labeler</string>
    <string name="label_header">Label</string>
    <string name="confidence_header">Accuracy</string>
    <string name="text_copied">Whole text copied to clipboard</string>
    <string name="no_text_to_copy">No text to copy</string>
    <string name="_1x">1x</string>
    <string name="text_scan">Text scan</string>
    <string name="image_scan">image_scan</string>
    <string name="analyzed_image_labels">Analyzed Image Labels</string>
    <string name="aspect_ratio">aspect ratio</string>
    <string name="_1x_">1x</string>
    <string name="_2">2</string>

</resources>