<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".barcode.BarcodeActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewBarcode"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/flashToggleIB"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/flashwork"
        android:scaleType="centerCrop"
        android:src="@drawable/flash_off"
        android:background="?attr/selectableItemBackgroundBorderless" />

    <ImageButton
        android:id="@+id/flipCameraIB"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/flashToggleIB"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cameraswitch"
        android:scaleType="centerCrop"
        android:src="@drawable/cameraflip"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/BarcodeScanIB"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/camerashutter"
        android:scaleType="fitCenter"
        android:src="@drawable/qr_code_img"
        android:background="@drawable/ripple_effect" />

    <TextView
        android:id="@+id/barcodeResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/blue_box_background"
        android:hint="@string/barcode_result"
        android:textColor="@android:color/white"
        android:textColorHint="#90A4AE"
        android:textIsSelectable="true"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />

    <ImageButton
        android:id="@+id/copyBarcode"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_above="@id/barcodeResultTextView"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/copybutton"
        android:scaleType="centerCrop"
        android:src="@drawable/copy_button"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/screenshotButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="35dp"
        android:contentDescription="@string/screenshot"
        android:src="@drawable/screenshot_img"
        android:scaleType="fitCenter"
        android:background="?attr/selectableItemBackgroundBorderless" />

</RelativeLayout>
