<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Spacer -->
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="25dp"
            android:text="@string/detectify"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/themeSwitcher"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_theme_switch"
            android:contentDescription="@string/theme_switcher" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        tools:scrollEnabled="false"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <!-- Main Logo -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/mainlogo"
                    android:scaleType="centerInside"
                    android:src="@drawable/main_image"
                    tools:ignore="ImageContrastCheck" />
            </RelativeLayout>
            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Barcode Scanner Button -->
                <LinearLayout
                    android:id="@+id/openBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/barcodebutton"
                        android:src="@drawable/qr_code_img" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/barcode_scanner"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp" />
                </LinearLayout>
                <!-- Face Analyzer Button -->
                <LinearLayout
                    android:id="@+id/openFaceDetection"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/facebutton"
                        android:src="@drawable/face_scan_img"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/face_analyzer"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp" />
                </LinearLayout>
                <!-- Object Detection Button -->
                <LinearLayout
                    android:id="@+id/openObjectDetector"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    tools:ignore="VisualLintBounds">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/objectdbutton"
                        android:src="@drawable/object_dec_img"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/object_detector"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp" />
                </LinearLayout>
                <!-- Text Recognition Button -->
                <LinearLayout
                    android:id="@+id/openImageLabeler"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    tools:ignore="VisualLintBounds">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/langtext"
                        android:src="@drawable/image_label_img"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image_labeler"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp" />
                </LinearLayout>
                <!-- Image labeler Button -->
                <LinearLayout
                    android:id="@+id/openTextRecognizer"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    tools:ignore="VisualLintBounds">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/textrbutton"
                        android:src="@drawable/text_rec_img"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_recognition"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
