<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:padding="16dp"
    tools:context=".textrecognition.RecognizedTextActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="25dp"
            android:text="@string/recognized_text"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/themeSwitcher"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_theme_switch"
            android:contentDescription="@string/theme_switcher" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/recognizedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_text_present_in_taken_picture"
            android:textIsSelectable="true"
            android:textColorHighlight="@color/colorAccent"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/copyText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:layout_gravity="end"
        android:importantForAccessibility="no"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/copyimg"
            android:src="@drawable/clip_copy"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
