<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/topOverlay"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/round_status_bar" />

    <View
        android:id="@+id/bottomOverlay"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/overlay_main" />

    <View
        android:id="@+id/spacerView"
        android:layout_width="0dp"
        android:layout_height="24dp" />

    <ImageButton
        android:id="@+id/flashToggleIB"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@id/spacerView"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/flashwork"
        android:scaleType="centerCrop"
        android:src="@drawable/flash_off"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/flipCameraIB"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/spacerView"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cameraswitch"
        android:scaleType="centerCrop"
        android:src="@drawable/cameraflip"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/restartButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="35dp"
        android:contentDescription="@string/restart"
        android:src="@drawable/restart_img"
        android:scaleType="fitCenter"
        android:background="?attr/selectableItemBackgroundBorderless" />

    <ImageButton
        android:id="@+id/screenshotButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="42dp"
        android:contentDescription="@string/screenshot"
        android:src="@drawable/screenshot_img"
        android:scaleType="fitCenter"
        android:background="?attr/selectableItemBackgroundBorderless" />

</merge>
