<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    tools:context=".CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"/>

    <ImageButton
        android:id="@+id/caputreIB"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/camerashutter"
        android:scaleType="centerCrop"
        android:src="@drawable/shutter"
        tools:ignore="ImageContrastCheck"
        android:background="?attr/selectableItemBackgroundBorderless"/>

    <ImageButton
        android:id="@+id/flashToggleIB"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/flashwork"
        android:scaleType="centerCrop"
        android:src="@drawable/flash_off"
        android:background="?attr/selectableItemBackgroundBorderless"
        />

    <ImageButton
        android:id="@+id/flipCameraIB"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/flashToggleIB"
        android:contentDescription="@string/cameraswitch"
        android:scaleType="centerCrop"
        android:src="@drawable/cameraflip"
        android:background="?attr/selectableItemBackgroundBorderless"
        />


</RelativeLayout>